// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmeliproDropdownMenuBtn > Snapshots > renders the component with all properties filled in 1`] = `
<amelipro-btn-stub
  badge="false"
  badgebgcolor="ap-pink"
  badgecolor="ap-white"
  bordered="false"
  class="
    dropdown-menu__btn
    text-left
    text-none
    w-100
  "
  color="ap-white"
  disabled="false"
  hovercolor="ap-grey-lighten-4"
  hoverunderline="false"
  href="modified-href"
  iconbgcolor="transparent"
  iconbordered="false"
  iconleft="false"
  infoblock="false"
  minheight="3rem"
  role="menuitem"
  size="60px"
  tabindex="-1"
  text="false"
  textcolor="ap-grey-darken-1"
  to="modified-to"
  type="button"
  underline="false"
  uniqueid="modified-unique-id"
></amelipro-btn-stub>
`;

exports[`AmeliproDropdownMenuBtn > Snapshots > renders the component with only required properties filled in 1`] = `
<amelipro-btn-stub
  badge="false"
  badgebgcolor="ap-pink"
  badgecolor="ap-white"
  bordered="false"
  class="
    dropdown-menu__btn
    text-left
    text-none
    w-100
  "
  color="ap-white"
  disabled="false"
  hovercolor="ap-grey-lighten-4"
  hoverunderline="false"
  iconbgcolor="transparent"
  iconbordered="false"
  iconleft="false"
  infoblock="false"
  minheight="3rem"
  role="menuitem"
  size="60px"
  tabindex="-1"
  text="false"
  textcolor="ap-grey-darken-1"
  type="button"
  underline="false"
  uniqueid="required-unique-id"
></amelipro-btn-stub>
`;

exports[`AmeliproDropdownMenuBtn > render correctly 1`] = `
<button
  class="
    amelipro-btn
    amelipro-btn--style
    bg-ap-white
    dropdown-menu__btn
    dropdown-menu__btn
    elevation-0
    text-left
    text-left
    text-none
    text-none
    v-btn
    v-btn--density-default
    v-btn--flat
    v-btn--size-default
    v-btn--variant-flat
    v-theme--light
    w-100
    w-100
  "
  id="my-btn-id"
  role="menuitem"
  style="height: auto; min-height: 2.5rem; color: #1A1B1B !important;"
  tabindex="-1"
  type="button"
>
  <span class="v-btn__overlay"></span>
  <span class="v-btn__underlay"></span>
  <!---->
  <span
    class="v-btn__content"
    data-no-activator=""
  >
    <span class="
      align-center
      amelipro-custom-btn
      d-flex
      flex-row
    ">
      label du bouton
      <!-- v-if -->
      <!-- v-if -->
    </span>
  </span>
  <!---->
  <!---->
</button>
`;
